--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -14,6 +14,7 @@
   <body>
     {% include 'navbar.html' %}
     {% block body %}{% endblock %}
+    {% include 'footer.html' %}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
