--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,35 +1,30 @@
 {% extends 'base.html' %}
 {% block title %}Mensa - Login{% endblock %}
 {% block body %}
-<form action="{{ url_for('index.login') }}" method="POST">
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="email" id="class-input" class="form-control" name="class-input" />
-    <label class="form-label" for="class-input">Classe</label>
-  </div>
 
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <input type="password" id="password-input" class="form-control" name="password-input" />
-    <label class="form-label" for="password-input">Password</label>
-  </div>
-
-  <!-- 2 column grid layout for inline styling -->
-  <div class="row mb-4">
-    <div class="col d-flex justify-content-center">
-      <!-- Checkbox -->
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="remember" id="remember-checkbox" name="remember-checkbox" />
-        <label class="form-check-label" for="remember-checkbox">Remember me</label>
-      </div>
+<form action="{{ url_for('login.login') }}" method="POST">
+  <div class="container mt-2" style="max-width: 35%;">
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <div class="alert alert-danger" role="alert">
+              {{ messages[0] }}
+          </div>
+      {% endif %}
+    {% endwith %}
+    <div class="mb-3">
+      <label for="class-input" class="form-label">Email address</label>
+      <input type="username" class="form-control" id="class-input" name="class-input" aria-describedby="class-help">
+      <div id="class-help" class="form-text">Examples: 5AI, 3BM, 4CE</div>
     </div>
-
-    <!-- <div class="col">
-      <a href="#!">Forgot password?</a>
-    </div> -->
+    <div class="mb-3">
+      <label for="password-input" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password-input" name="password-input">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="remember-checkbox" name="remember-checkbox" value="remember">
+      <label class="form-check-label" for="remember-checkbox">Remember Me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </div>
-
-  <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
 </form>
 {% endblock %}
