WIP: Order form

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -2,7 +2,11 @@
 {% block title %}Mensa{% endblock %}
 
 {% block body %}
-<h1>
-    Hello, World!
-</h1>
+<form action="{{ url_for('index.index') }}" method="POST">
+    <div class="container">
+        <div class="row justify-content-center">
+            
+        </div>
+    </div>
+</form>
 {% endblock %}
