--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -2,11 +2,10 @@
 {% block title %}Mensa{% endblock %}
 
 {% block body %}
+<script src="{{ url_for('static', filename='order_form.js') }}"></script>
 <form action="{{ url_for('index.index') }}" method="POST">
-    <div class="container">
-        <div class="row justify-content-center">
-            
-        </div>
+    <div class="container mt-3" id="form-container">
+        
     </div>
 </form>
 {% endblock %}
