--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -4,7 +4,7 @@
 {% block body %}
 <script src="{{ url_for('static', filename='order_form.js') }}"></script>
 <form action="{{ url_for('index.index') }}" method="POST">
-    <div class="container mt-3" id="form-container">
+    <div class="container mt-3" id="order-container">
         
     </div>
 </form>
