--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <script src="{{ url_for('static', filename='order_form.js') }}"></script>
-<form action="{{ url_for('index.index') }}" method="POST">
+<form action="{{ url_for('index.index') }}" method="POST" id="order-form">
     <div class="container mt-3" id="order-container">
         
     </div>
