--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -7,5 +7,6 @@
     <div class="container mt-3" id="order-container">
         
     </div>
+    <button type="submit" class="btn btn-primary">Order</button>
 </form>
 {% endblock %}
